# dbx-sharepoint

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api-reference.md  authentication.md  azure-gov.md  excel-templates.md  lakeflow-connect.md  troubleshooting.md  usage-patterns.md
notebooks/: quickstart.py
src/dbx_sharepoint/: __init__.py  _url.py  auth.py  client.py  excel.py  exceptions.py  shared_link.py
tests/: test_auth.py  test_client.py  test_excel.py  test_exceptions.py  test_public_api.py  test_shared_link.py  test_url.py
